# linux-w767

./: .gitignore  BUILDING.md  KIMI_0.md  KIMI_1.md  KIMI_2.md  KIMI_3.md  README.md  RELEASE-NOTES.md
acpi/: dsdt.dsl
deploy/: build-usb-image.sh
deploy/deploy-iter19/: README.md  sc8180x-samsung-w767.dtb.iter17-rollback  sc8180x-samsung-w767.dtb.iter19
docs/: 00-hardware-combined.md  01-display-chain.md  02-samsung-platform.md  03-bus-and-device-map.md  04-soc-power-and-reset.md  iter-17-boot-snapshot.txt
dts/: sc8180x-samsung-w767.dts
kernel-patches/: 0001-arm64-dts-qcom-add-Samsung-Galaxy-Book-S-W767-device.patch
kernel-patches/iter28-diag/: 0001-dwc3-qcom-legacy-pr_emerg-probe-instrumentation.patch
kernel-patches/iter36-diag/: 0001-dwc3-core-init-pr_emerg-instrumentation.patch
kernel-patches/iter44-tqftpserv-vendor-path/: 0001-tqftpserv-accept-readonly-vendor-firmware-path.patch
recon/: 01-acpi-devices.md  02-pnp-drivers.md  03-firmware-manifest.md  04-pep-vote-map.md  05-gpio-map.md  06-bus-map.md  07-memory-map.md  08-linux-gap.md  PanelDriverDump.java  README.md  _extract-pep.ps1  _raw-firmware.tsv  _raw-fw-blobs.tsv  _raw-oeminfs.tsv  _raw-pep-votes.tsv  _raw-pnp.tsv  w767-w11-drivers.manifest.md
recon/r2-analysis/: qcdxkm8180-pll-investigation.md  qcdxkm8180-rate-tables.md
release/: .gitignore  0001-ath10k-wcn3990-set-fw-board.patch  README.md  SHA256SUMS  loader-entry-w767.conf
research/: 2026-05-17-brief-deep-usb-display-debug.md  2026-05-17-brief-iter29-remoteproc-and-third-usb.md  2026-05-17-brief-iter32-orientation-and-urs-init.md  2026-05-17-brief-iter34-mpss-crashloop-and-dwc3-core.md  2026-05-17-brief-keyboard-RE.md  2026-05-17-brief-qcxhcifilter-ghidra.md  2026-05-17-brief-usb-and-keyboard-debug.md  2026-05-17-claude-iter21-boot-result.md  2026-05-17-claude-keyboard-protocol.md  2026-05-17-claude-pre-boot-audit.md  2026-05-17-claude-q1-usb-port-map.md  2026-05-17-claude-q5-wifi-ldo10.md  2026-05-17-claude-q6-q7-urs-orientation.md  2026-05-17-claude-q8-q9-mpss-and-dwc3-core.md  2026-05-17-claude-qcxhcifilter-rev.md  2026-05-17-claude-recon-emuec-chip-id.md  2026-05-17-claude-usb-mp-vs-sec-deep.md  2026-05-17-claude-usb-stack-deps.md  2026-05-17-iter28-dwc3-instrumentation.md  2026-05-17-iter28-result-keyboard-works.md  2026-05-17-iter29-wifi-attempt.md  2026-05-17-iter30-smp2p-and-urs-unblock.md  2026-05-17-iter31-hwspinlock-cascade-fix.md  2026-05-17-iter32-urs-endpoint-chain.md  2026-05-17-iter33-branch-c-mpss.md  2026-05-17-iter34-phy-supply-mpss-start.md  2026-05-17-iter35-userspace-daemons.md  2026-05-17-update-iter25-findings.md  2026-05-18-brief-iter47-w767-wifi-board-data.md  2026-05-18-brief-iter56-gpu-display-bringup.md  2026-05-18-brief-iter61-pmos-pivot-for-brother.md  2026-05-18-claude-iter47-wifi-board-data.md  2026-05-18-claude-iter56-gpu-bringup-answers.md  2026-05-18-claude-iter62-boe-edid-decoded.md  2026-05-18-claude-iter62-fixit-from-logs.md  2026-05-18-claude-iter62-ghidra-paneldriver.md  2026-05-18-claude-w767-gpu-bt-kbd-pm-firmware.md  2026-05-18-gemini-emuec-secpmic-paneldriver.md  2026-05-18-reply-to-brother-iter56-still-hangs.md  brief-v1.md  (+16 more)
research/iter61-logs/: SUMMARY-for-kimi.md
research/photos/: README.md
w767-os/audit/: README.md  audit.sh  gbs-audit-full  gbs-audit-full.service  gbs-audit-quick  gbs-audit-quick.service  gbs-audit-quick.timer  install-on-fedora.sh  pull-from-target.sh
w767-os/grub/: w767-phase1.conf  w767-phase2.conf
w767-os/initramfs/: build-initramfs.sh
w767-os/kernel/: README-iter28-hybrid.md  base-arm64.config  build-kernel.sh  iter28-fedora-hybrid.config  iter29-fedora-hybrid.config  iter30-fedora-hybrid.config  iter31-fedora-hybrid.config  iter36-fedora-hybrid.config  w767-initramfs.config  (+3 more)
w767-os/rust/: Cargo.toml  rust-toolchain.toml
w767-os/rust/.cargo/: config.toml
w767-os/rust/vendor_sol/coral_net/: Cargo.toml
w767-os/rust/vendor_sol/coral_net/src/: dhcp.rs  interface.rs  lib.rs
w767-os/rust/vendor_sol/sol_ipc/: Cargo.toml
w767-os/rust/vendor_sol/sol_ipc/src/: lib.rs  transport.rs
w767-os/rust/w767_ctl/: Cargo.toml
w767-os/rust/w767_ctl/src/: lib.rs  main.rs
w767-os/rust/w767_ctl_cli/: Cargo.toml
w767-os/rust/w767_ctl_cli/src/: main.rs
w767-os/rust/w767_init/: Cargo.toml
w767-os/rust/w767_init/src/: bootlog.rs  main.rs
w767-os/rust/w767_netd_lite/: Cargo.toml
w767-os/rust/w767_netd_lite/src/: main.rs
w767-os/rust/w767_paths/: Cargo.toml
w767-os/rust/w767_paths/src/: lib.rs
windows-extracts/: acpi_thermal.txt  baseboard.txt  bcd.txt  bios.txt  computerinfo.txt  display-class.reg  drivers_signed.txt  hid_devices.txt  memarray.txt  pci_and_bus.txt  physmem.txt  pnp_all.txt  pnp_details.txt  powercfg.txt  resourcemap.reg  sleepstates.txt  system.txt
(+133 files in other folders)
