[workspace]
resolver = "2"
members = [
    "w767_paths",
    "w767_init",
    "w767_ctl",
    "w767_ctl_cli",
    "w767_netd_lite",
    "vendor_sol/coral_net",
    "vendor_sol/sol_ipc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[workspace.dependencies]
# Path deps — vendored from sol-os + our own small crates
coral_net = { path = "vendor_sol/coral_net" }
sol_ipc = { path = "vendor_sol/sol_ipc" }
w767_paths = { path = "w767_paths" }

# External deps — pinned to match sol-os so vendored code compiles unchanged
anyhow = "1"
bincode = "1"
clap = { version = "4", features = ["derive"] }
dhcproto = "0.12"
futures = "0.3"
libc = "0.2"
netlink-packet-route = "0.19"
nix = { version = "0.29", features = ["sched", "net", "mount", "fs", "process", "signal"] }
rtnetlink = "0.14"
serde = { version = "1", features = ["derive"] }
tarpc = { version = "0.35", features = ["tokio1", "serde-transport"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros", "io-util", "fs", "process", "signal"] }
tokio-serde = { version = "0.9", features = ["bincode"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"        # size > speed; bring-up binaries are cold paths
lto = true
codegen-units = 1
strip = true
panic = "abort"
